[tool.poetry]
name = "brocolib-extract-load"
version = "0.1.0"
description = "Extract (Transform) & Load Data by Brocoli"
authors = ["Brocoli Data, <contact.brocoli@gmail.com>"]
readme = "README.md"
packages = [{include = "brocolib_extract_load"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.2"
fastparquet = "^2022.12.0"
fsspec = "^2022.11.0"
gcsfs = "^2022.11.0"
google-cloud-storage = "^2.7.0"
google-cloud-bigquery = "^3.4.1"
google-cloud-pubsub = "^2.13.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
