[tool.poetry]
name = "brocolib-factory-utils"
version = "0.2.8"
description = "Utilities to deploy Brocoli Data Platform"
authors = ["Brocoli Data, <contact.brocoli@gmail.com>"]
readme = "README.md"
packages = [{include = "brocolib_factory_utils"}]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"
PyGithub = "^1.57"
GitPython = "^3.1.29"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
