[tool.poetry]
name = "brocolib-transform"
version = "0.0.6"
description = "Datawarehouse Transformation layer using dbt"
authors = ["Brocoli Data, <contact.brocoli@gmail.com>"]
readme = "README.md"
packages = [{include = "brocolib_transform"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
dbt-core = "1.3.2"
dbt-bigquery = ">=1.3,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
